                - theses overloaded methods can take fetch callbacks and also datatype adater callbacks
                - It makes the code much compact as it hides the resultset fetch calls
                - It also allow adapting resultsets returned values to user defined types
                - See the updated main demo application for examples
                
        - Changes:
            * Exception class  does not derive any more from HandleHolder<>
            * Date::SysDate() is now a static method that returns a now a Date Object with system date time
            * Timestamp::SysTimestamp() is now a static method that returns a now a Timestamp Object with system timestamp
            * Renamed Statement::Execute(void) to ExecutePrepared(void)

        - Fixes        
            * Fixed missing  operator "|" for recently Enum promoted to Flags
            * Fixed HandleHolder<>::operator bool
            * Fixed Statement::Prepare() and Statement::Execute() : when called again for the same object, the internal map of binds was not cleared although bind objects were freed, leading to a segfault
            * Fixed Statement::Bind<ostring> : strings binded to statements with Out or InOut direction mode had their content padded up to max provided size after execution
            * Fixed C++03 standard violation : Removed usage of std::vector::data() that was introduced in C++11 in order to be compliant with C++03
            * Fixed Timestamp::SetDate()
            * Removed unimplemented prototype Lob<TLobObjectType>:: operator TLobObjectType()
            * Fixed segfault when Environment::Initialize() fails to load the oci shared library
        - C++ compilers validated versions:
             * Microsoft C++ compiler : all versions from Visual Studio 2008
             * GCC : all versions from 4.1 
             * Clang : all versions from 3.1 