@@ -63,6 +63,9 @@
                 - It makes the code much compact as it hides the resultset fetch calls
                 - It also allow adapting resultsets returned values to user defined types
                 - See the updated main demo application for examples
+            * Added Resultset::Get<>() overloads with input value arguments to fill instead of returning values. This allow to no specify the data type in the Get<>() call.
+                - void Get(unsigned int, TDataType &value) const
+                - void Get(const ostring &name, TDataType &value) const;
                 
         - Changes:
             * Exception class  does not derive any more from HandleHolder<>
